--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,10 @@
         <center><h1>Dashboard Twitter</h1></center>
         <input type="text" id="search_bar">
         <button id="btn_search">Rechercher</button>
-        <div id="div_tweets"></div>
+        <div id="div_tweets">
+            <p id="user_name"></p>
+            <p id="text"></p>
+            <p id="date"></p>
+        </div>
     </body>
 </html>
