TODO: return NOT_FOUND, write jQuery myself

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,9 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <script type="text/javascript" src="request.js"></script>
+        <script type="text/javascript" src="init.js"></script>
+        <script type="text/javascript" src="Tweets.js"></script>
+        <script src="http://libs.baidu.com/jquery/2.1.3/jquery.js"></script>
         <title>Dashboard Twitter</title>
     </head>
     <body>
