--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <script type="text/javascript" src="init.js"></script>
         <script type="text/javascript" src="Tweets.js"></script>
-        <script src="http://libs.baidu.com/jquery/2.1.3/jquery.js"></script>
+        <script src="jquery-3.4.1.min.js"></script>
         <title>Dashboard Twitter</title>
     </head>
     <body>
