add js support on server

--- a/client/error.html
+++ b/client/error.html
@@ -1,1 +1,9 @@
-<h1>erratum</h1>
+<html>
+    <head>
+        <meta charset="UTF-8"/>
+        <title>Dashboard Twitter</title>
+    </head>
+    <body>
+        <center><h1>ERROR</h1></center>
+    </body>
+</html>
