affichage des tweets

--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,12 @@
         <script type="text/javascript" src="Tweets.js"></script>
         <title>Dashboard Twitter</title>
     </head>
-    <body>
-        <center><h1>Dashboard Twitter</h1></center>
-        <input type="text" id="search_bar">
-        <button id="btn_search">Rechercher</button>
+    <body style="background-color: skyblue;">
+        <div style="text-align: center;">
+            <h1>Dashboard Twitter</h1>
+            <input type="text" id="search_bar">
+            <button id="btn_search" style="background-color:orange;color:white">Rechercher</button>
+        </div>
         <div id="div_tweets">
             <p id="user_name"></p>
             <p id="text"></p>
