pie chart et effet nombre de tweets

--- a/client/index.html
+++ b/client/index.html
@@ -12,12 +12,6 @@
             <input type="text" id="search_bar">
             <button id="btn_search" style="background-color:orange;color:white">Rechercher</button>
         </div>
-        <div id="div_hashtag"></div>
-        <div id="div_tweets">
-            <p id="user_name"></p>
-            <p id="text"></p>
-            <p id="date"></p>
-        </div>
-        <div id="style_div"></div>
+        <div id="div_results"></div>
     </body>
 </html>
