--- a/client/error.html
+++ b/client/error.html
@@ -1,9 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
     <head>
-        <meta charset="UTF-8"/>
+        <meta charset="UTF-8">
         <title>Dashboard Twitter</title>
     </head>
-    <body>
-        <center><h1>ERROR</h1></center>
+    <body style="background-color: skyblue;">
+        <div style="text-align: center;">
+            <h1 style="color:white">Dashboard Twitter</h1>
+            <h2>Erreur : Cette page n'existe pas.</h2>
+        </div>
     </body>
 </html>
