--- a/client/index.html
+++ b/client/index.html
@@ -2,13 +2,14 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
+        <script type="text/javascript" src="charts.js"></script>
         <script type="text/javascript" src="init.js"></script>
-        <script type="text/javascript" src="Tweets.js"></script>
+        <script type="text/javascript" src="ajax.js"></script>
         <title>Dashboard Twitter</title>
     </head>
     <body style="background-color: skyblue;">
         <div style="text-align: center;">
-            <h1>Dashboard Twitter</h1>
+            <h1 style="color:white">Dashboard Twitter</h1>
             <input type="text" id="search_bar">
             <button id="btn_search" style="background-color:orange;color:white">Rechercher</button>
         </div>
