[Tested]Add multithreading and timeout, with advanced research

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,12 @@
             <h1 style="color:white">Dashboard Twitter</h1>
             <input type="text" id="search_bar">
             <button id="btn_search" style="background-color:orange;color:white">Rechercher</button>
+
+        </div>
+        <div style="text-align: center;">
+            <p>Recherche Avancée</p>
+            <input type="text" id="search_name">
+            <button id="btn_name" style="background-color:orange;color:white">Recherche par user_name</button>
         </div>
         <div id="div_results"></div>
     </body>
