--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
+        <script type="text/javascript" src="param.js"></script>
         <script type="text/javascript" src="charts.js"></script>
         <script type="text/javascript" src="init.js"></script>
         <script type="text/javascript" src="ajax.js"></script>
