update critere de rechercher

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,8 @@
             <label for="text">Texte</label><br>
             <input type="radio" id="radio_user_name" name="critere" value="user_name">
             <label for="user_name">Nom d'utilisateur</label><br>
+            <input type="radio" id="radio_hashtag" name="critere" value="hashtag">
+            <label for="hashtag">Hashtag</label><br>
         </div>
         <div id="div_results"></div>
     </body>
